my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EERRSTMT/T_EERRSTMT-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EERRSTMT_STRUCT_H
#define T_EERRSTMT_STRUCT_H

typedef struct eerrstmt eerrstmt_t;

conf_class_t *_initialize_T_EERRSTMT(void);


#endif /* not T_EERRSTMT_STRUCT_H */
